fix padding issue for signup-top on smaller devices#3
reduced margin-bottom to 1rem

--- a/loginForm/style.css
+++ b/loginForm/style.css
@@ -311,7 +311,7 @@ button[type="submit"]:disabled:hover {
 
 @media (min-width: 321px) and (max-width: 681px) {
     :root {
-        --root-font-size: 14px;
+        --root-font-size: 12px;
         --input-padding: 0.2vh;
         --box-shadow: 0px 5px 8px -7px #000;
         --signup-btn-submit: .5rem;
@@ -340,7 +340,7 @@ button[type="submit"]:disabled:hover {
     :root {
         --input-margin: 3%;
         --em-one-color: #dfd9d9;
-        --signup-top-padding-1: 2vh;
+        --signup-top-padding-1: 1vh;
         --signup-top-padding-2: 2vh;
     }
     
@@ -367,5 +367,9 @@ button[type="submit"]:disabled:hover {
         /* overflow: hidden; */
         background-color: var(--image-screen);
 
+    }
+    
+    .small-device-signup-top {
+        margin-bottom: 1rem;
     }
 }
